--- a/app/src/main/res/layout/fragment_tab_parent.xml
+++ b/app/src/main/res/layout/fragment_tab_parent.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginSelectRoleActivity">
+    tools:context=".SelectRoleActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,12 +20,6 @@
 
 
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/line1_login_select_parent_or_child_activity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.0" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/line2_login_select_parent_or_child_activity"
@@ -37,9 +31,9 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/line1_login_select_parent_or_child_activity"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/line2_login_select_parent_or_child_activity"
-            android:background="@drawable/select_parent_or_child_background"
+            android:background="@drawable/card_background"
             android:backgroundTint="@color/cardBackground"
             android:shape="ring"
             app:cardCornerRadius="25dp"
@@ -84,7 +78,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     app:autoSizeTextType="uniform"
-                    android:background="@drawable/select_parent_or_child_background"
+                    android:background="@drawable/card_background"
                     android:fontFamily="sans-serif-light"
                     android:gravity="center"
                     android:text="@string/parent"
