--- a/app/src/main/res/layout/role_select_activity.xml
+++ b/app/src/main/res/layout/role_select_activity.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/backgroundColor"
-    tools:context=".LoginSelectRoleActivity">
+    tools:context=".SelectRoleActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
