--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,12 +4,16 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/child_select" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/info"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/info" />
+    <item
+        android:id="@+id/child_schedule"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/child_schedule" />
 
     <item
         android:id="@+id/navigation_notifications"
