--- a/app/src/main/res/drawable/tab_layout_background.xml
+++ b/app/src/main/res/drawable/tab_layout_background.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/colorAccent">
+    android:color="@color/colorPrimary">
     <item>
         <shape
             android:shape="rectangle">
             <solid
-                android:color="@color/colorAccentPale"
+                android:color="@color/colorPrimary"
                 >
             </solid>
             <corners
-                android:radius="50dp">
+                android:bottomLeftRadius="25dp"
+                android:bottomRightRadius="25dp">
             </corners>
         </shape>
     </item>
