--- a/app/src/main/res/layout/fragment_schedudle_parent.xml
+++ b/app/src/main/res/layout/fragment_schedudle_parent.xml
@@ -45,6 +45,7 @@
             android:src="@drawable/ic_add_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:onClick="onAddButtonPressed"
             />
 
 
