--- a/app/src/main/res/layout/fragment_tab_parent.xml
+++ b/app/src/main/res/layout/fragment_tab_parent.xml
@@ -78,12 +78,14 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     app:autoSizeTextType="uniform"
-                    android:background="@drawable/card_background"
+                    android:background="@drawable/button_background"
+                    android:textColor="@color/textSecondColor"
+
                     android:fontFamily="sans-serif-light"
                     android:gravity="center"
                     android:text="@string/parent"
                     android:textAllCaps="false"
-                    android:textColor="@color/textPrimaryColor"
+
                     app:layout_constraintBottom_toBottomOf="@id/line2_card1_select_role_fragment"
                     app:layout_constraintTop_toTopOf="@id/line1_card1_select_role_fragment"
                     android:onClick="onParentButtonPressed"
