--- a/app/src/main/res/layout/one_time_task_item.xml
+++ b/app/src/main/res/layout/one_time_task_item.xml
@@ -21,12 +21,12 @@
             android:id="@+id/child_item_text"
             android:layout_width="0dp"
             android:layout_height="55dp"
-            android:text="text text"
+            android:text=""
             android:maxLines="2"
             android:textSize="35sp"
             android:textColor="@color/textPrimaryColor"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/line1_child_item"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:fontFamily="sans-serif-light"
             android:layout_marginStart="20dp"
@@ -40,11 +40,10 @@
             app:autoSizeTextType="uniform"
             android:fontFamily="sans-serif-thin"
             android:maxLines="1"
-
             android:text=""
             android:textColor="@color/textPrimaryColor"
             android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="@id/line1_child_item"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/child_item_text" />
 
@@ -55,6 +54,7 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.8"
             android:background="@color/cardBackground"/>
+
 
 
         <FrameLayout
@@ -71,23 +71,11 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:max="100"
+                android:progress="50"
                 android:progressDrawable="@drawable/progress_bar_circle"
                 />
         </FrameLayout>
-
-        <TextView
-            android:id="@+id/progress_text"
-            android:layout_width="0dp"
-            android:layout_height="22dp"
-            app:layout_constraintStart_toStartOf="@id/line1_child_item"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="60/80"
-            app:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:textColor="@color/textPrimaryColor"
-            android:fontFamily="sans-serif-light"
-            />
 
 
 
