--- a/app/src/main/res/layout/fragment_child_select.xml
+++ b/app/src/main/res/layout/fragment_child_select.xml
@@ -4,31 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".main_fragments.ScheduleParent">
+    tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/calendarView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:mcv_showOtherDates="all"
-            app:mcv_selectionColor="@color/colorAccent"
-            app:mcv_firstDayOfWeek="monday"
-            app:layout_constraintTop_toTopOf="parent"
-            app:mcv_calendarMode="week"
-
-            />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/task_recycler"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/calendarView"
+            android:paddingTop="15dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
 
             />
@@ -45,7 +32,7 @@
             android:src="@drawable/ic_add_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:onClick="onAddTaskButtonPressed"
+            android:onClick="onAddNewChildPressed"
             />
 
 
