--- a/app/src/main/res/layout/select_child_item.xml
+++ b/app/src/main/res/layout/select_child_item.xml
@@ -3,14 +3,16 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
+
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
-    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,20 +23,20 @@
             android:id="@+id/child_item_text"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:maxLines="2"
-            android:textSize="30sp"
-            app:autoSizeTextType="uniform"
-            app:autoSizeMinTextSize="12sp"
-            app:autoSizeMaxTextSize="35sp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:fontFamily="@font/open_sans_light"
             android:gravity="center|start"
+            android:maxLines="2"
             android:textColor="@color/textPrimaryColor"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="30sp"
+            app:autoSizeMaxTextSize="35sp"
+            app:autoSizeMinTextSize="12sp"
+            app:autoSizeTextType="uniform"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:fontFamily="sans-serif-light"
-            android:layout_marginStart="10dp"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
 
