--- a/app/src/main/res/drawable/white_ripple.xml
+++ b/app/src/main/res/drawable/white_ripple.xml
@@ -6,7 +6,7 @@
         <shape
             android:shape="rectangle">
             <solid
-                android:color="@color/colorAccentPale"
+                android:color="@color/transparentColor"
                 >
             </solid>
             <corners
