--- a/app/src/main/res/layout/child_item.xml
+++ b/app/src/main/res/layout/child_item.xml
@@ -3,6 +3,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="80dp"
@@ -21,16 +22,15 @@
             android:id="@+id/child_item_text"
             android:layout_width="0dp"
             android:layout_height="55dp"
-            android:text="text text"
-            android:maxLines="2"
-            android:textSize="35sp"
-            android:textColor="@color/textPrimaryColor"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/line1_child_item"
-            app:layout_constraintTop_toTopOf="parent"
-            android:fontFamily="sans-serif-light"
             android:layout_marginStart="20dp"
-            />
+            android:fontFamily="@font/open_sans_light"
+            android:maxLines="2"
+            android:text="text text"
+            android:textColor="@color/textPrimaryColor"
+            android:textSize="35sp"
+            app:layout_constraintEnd_toEndOf="@id/line1_child_item"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/child_item_until_date"
@@ -57,37 +57,24 @@
             android:background="@color/cardBackground"/>
 
 
-        <FrameLayout
-            android:id="@+id/frame_layout_child_item"
+        <ImageButton
+            android:id="@+id/goal_check"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintStart_toEndOf="@id/line1_child_item"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/progress_text"
-            >
-            <ProgressBar
-                android:id="@+id/child_progress_bar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:progressDrawable="@drawable/progress_bar_circle"
-                />
-        </FrameLayout>
-
-        <TextView
-            android:id="@+id/progress_text"
-            android:layout_width="0dp"
-            android:layout_height="22dp"
-            app:layout_constraintStart_toStartOf="@id/line1_child_item"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:background="?android:attr/selectableItemBackground"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="60/80"
-            app:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:textColor="@color/textPrimaryColor"
-            android:fontFamily="sans-serif-light"
+            app:srcCompat="@drawable/anim_check"
+            android:visibility="visible"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             />
+
 
 
 
