--- a/app/src/main/res/layout/fragment_child_about.xml
+++ b/app/src/main/res/layout/fragment_child_about.xml
@@ -7,25 +7,41 @@
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
-    <TextView
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
-        android:text="Текущая цель"
-        app:autoSizeTextType="uniform"
-        android:gravity="center"
-        android:textColor="@color/textPrimaryColor"
-        android:layout_marginBottom="10dp"
-        />
+        android:layout_height="?attr/actionBarSize"
+        android:elevation="1dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="#fff"
+        android:textAlignment="center"
+
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_gravity="center"
+            android:text="@string/current_goal"
+            app:autoSizeTextType="uniform"
+            android:gravity="center"
+            android:textColor="@color/textPrimaryColor"
+            />
+
+    </androidx.appcompat.widget.Toolbar>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/current_goal"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
+        android:clickable="false"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
+        android:layout_marginTop="10dp"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -36,7 +52,7 @@
                 android:id="@+id/goal_text"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:text="@string/add_goal"
+                android:text="@string/child_have_not_added_goal"
                 android:maxLines="2"
                 android:gravity="center|start"
                 app:autoSizeTextType="uniform"
@@ -61,37 +77,60 @@
                 app:layout_constraintGuide_percent="0.8"
                 android:background="@color/cardBackground"/>
 
+            <LinearLayout
+                android:id="@+id/progress_bar_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toEndOf="@id/line1_child_item"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:orientation="vertical"
+                android:visibility="gone"
+                >
+                <FrameLayout
+                    android:id="@+id/frame_layout_child_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    >
+                    <ProgressBar
+                        android:id="@+id/child_progress_bar"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:progressDrawable="@drawable/progress_bar_circle"
+                        />
+                </FrameLayout>
 
-            <FrameLayout
-                android:id="@+id/frame_layout_child_item"
+                <TextView
+                    android:id="@+id/progress_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="22dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:autoSizeTextType="uniform"
+                    android:gravity="center"
+                    android:textColor="@color/textPrimaryColor"
+                    android:fontFamily="sans-serif-light"
+                    />
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/goal_check"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintStart_toEndOf="@id/line1_child_item"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/progress_text"
-                >
-                <ProgressBar
-                    android:id="@+id/child_progress_bar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:progressDrawable="@drawable/progress_bar_circle"
-                    />
-            </FrameLayout>
-
-            <TextView
-                android:id="@+id/progress_text"
-                android:layout_width="0dp"
-                android:layout_height="22dp"
-                app:layout_constraintStart_toStartOf="@id/line1_child_item"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:background="?android:attr/selectableItemBackground"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:autoSizeTextType="uniform"
-                android:gravity="center"
-                android:textColor="@color/textPrimaryColor"
-                android:fontFamily="sans-serif-light"
+                android:src="@drawable/ic_check_24dp"
+                android:visibility="gone"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
                 />
+
 
 
 
