--- a/app/src/main/res/layout/fragment_child_select.xml
+++ b/app/src/main/res/layout/fragment_child_select.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
+        android:id="@+id/mainview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -33,15 +33,16 @@
 
         </androidx.appcompat.widget.Toolbar>
 
+
+
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_below="@id/toolbar"
             android:id="@+id/task_recycler"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="match_parent"
 
             />
-
+    </RelativeLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
@@ -52,11 +53,12 @@
             android:foregroundTint="@color/colorAccent"
             android:tintMode="src_over"
             android:src="@drawable/ic_add_black_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_anchor="@id/task_recycler"
+            app:layout_anchorGravity="bottom|end"
+            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
             android:onClick="onAddNewChildPressed"
             />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
