--- a/app/src/main/res/layout/fragment_schedudle_parent.xml
+++ b/app/src/main/res/layout/fragment_schedudle_parent.xml
@@ -1,53 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".parent_main_fragments.ScheduleParent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
 
-        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/calendarView"
+        <RelativeLayout
+            android:id="@+id/mainview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:mcv_showOtherDates="all"
-            app:mcv_selectionColor="@color/colorAccent"
-            app:mcv_firstDayOfWeek="monday"
-            app:layout_constraintTop_toTopOf="parent"
-            app:mcv_calendarMode="week"
+            android:layout_height="match_parent">
 
-            />
+                <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/calendarView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:mcv_showOtherDates="all"
+                    app:mcv_selectionColor="@color/colorAccent"
+                    app:mcv_firstDayOfWeek="monday"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:mcv_calendarMode="week"
+                    app:mcv_headerTextAppearance="@style/CustomTextAppearance"
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/task_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/calendarView"
-            app:layout_constraintBottom_toBottomOf="parent"
 
-            />
+                    />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_below="@id/calendarView"
+                    android:id="@+id/task_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintTop_toBottomOf="@id/calendarView"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    />
+
+        </RelativeLayout>
+
+
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="18dp"
+            android:layout_margin="10dp"
             android:background="@color/colorAccent"
             android:backgroundTint="@color/colorAccent"
             android:foregroundTint="@color/colorAccent"
             android:tintMode="src_over"
             android:src="@drawable/ic_add_black_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_anchor="@id/task_recycler"
+            app:layout_anchorGravity="bottom|end"
+            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
             android:onClick="onAddTaskButtonPressed"
             />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
