--- a/app/src/main/res/layout/one_time_task_item.xml
+++ b/app/src/main/res/layout/one_time_task_item.xml
@@ -11,6 +11,7 @@
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
     android:layout_marginBottom="5dp"
+    android:id="@+id/child_layout"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,7 +27,7 @@
             android:textSize="35sp"
             android:textColor="@color/textPrimaryColor"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/line1_child_item"
             app:layout_constraintTop_toTopOf="parent"
             android:fontFamily="sans-serif-light"
             android:layout_marginStart="20dp"
@@ -43,7 +44,7 @@
             android:text=""
             android:textColor="@color/textPrimaryColor"
             android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/line1_child_item"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/child_item_text" />
 
@@ -57,25 +58,23 @@
 
 
 
-        <FrameLayout
-            android:id="@+id/frame_layout_child_item"
+        <ImageButton
+            android:id="@+id/goal_check"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintStart_toEndOf="@id/line1_child_item"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/progress_text"
-            >
-            <ProgressBar
-                android:id="@+id/child_progress_bar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:max="100"
-                android:progress="50"
-                android:progressDrawable="@drawable/progress_bar_circle"
-                />
-        </FrameLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="?android:attr/selectableItemBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:srcCompat="@drawable/anim_check"
+            android:visibility="visible"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            />
 
 
 
