updated to api 28

--- a/app/src/main/res/layout/activity_add_new_child.xml
+++ b/app/src/main/res/layout/activity_add_new_child.xml
@@ -27,8 +27,7 @@
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/add_new_child_card_backgroung"
-        android:backgroundTint="@color/cardBackground"
+        android:backgroundTint="@color/image_card_background"
         app:cardCornerRadius="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="-10dp"
