--- a/app/src/main/res/layout/activity_add_new_task.xml
+++ b/app/src/main/res/layout/activity_add_new_task.xml
@@ -531,6 +531,7 @@
                     app:cardCornerRadius="3dp"
                     android:clickable="true"
                     android:onClick="buildAlertDialog"
+                    android:layout_marginBottom="20dp"
                     >
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
