--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,13 +44,16 @@
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/card_background"
-        android:backgroundTint="@color/cardBackground"
         android:clickable="false"
         android:shape="ring"
         app:cardCornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="@id/line_last_activity_login"
-        app:layout_constraintTop_toBottomOf="@id/line1_activity_login">
+        app:layout_constraintTop_toBottomOf="@id/line1_activity_login"
+        android:backgroundTint="@color/image_card_background"
+        app:cardElevation="5dp"
+        android:layout_marginTop="5dp"
+
+        >
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
