--- a/app/src/main/res/layout/fragment_tab_child.xml
+++ b/app/src/main/res/layout/fragment_tab_child.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SelectRoleActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@color/backgroundColor"
         >
         <androidx.constraintlayout.widget.Guideline
@@ -25,13 +23,13 @@
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/line2_login_select_parent_or_child_activity"
-            android:background="@drawable/card_background"
-            android:backgroundTint="@color/cardBackground"
-            android:shape="ring"
+            android:backgroundTint="@color/image_card_background"
             app:cardCornerRadius="25dp"
+            android:layout_marginTop="5dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:clickable="false"
+            app:cardElevation="5dp"
             >
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -73,6 +71,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:src="@drawable/children"
+
                     app:layout_constraintBottom_toBottomOf="@+id/line1_card1_select_role_fragment"
                     app:layout_constraintStart_toStartOf="@id/line3_card1_select_role_fragment"
                     app:layout_constraintEnd_toEndOf="@id/line4_card1_select_role_fragment"
