--- a/app/src/main/res/layout/fragment_tab_parent.xml
+++ b/app/src/main/res/layout/fragment_tab_parent.xml
@@ -13,14 +13,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@color/backgroundColor"
         >
-
-
-
-
-
-
-
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/line2_login_select_parent_or_child_activity"
             android:layout_width="wrap_content"
@@ -33,13 +25,14 @@
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/line2_login_select_parent_or_child_activity"
-            android:background="@drawable/card_background"
-            android:backgroundTint="@color/cardBackground"
             android:shape="ring"
             app:cardCornerRadius="25dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:clickable="false"
+            android:backgroundTint="@color/image_card_background"
+            app:cardElevation="5dp"
+            android:layout_marginTop="5dp"
             >
 
             <androidx.constraintlayout.widget.ConstraintLayout
