--- a/app/src/main/res/layout/dialog_send_selfies.xml
+++ b/app/src/main/res/layout/dialog_send_selfies.xml
@@ -11,11 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:maxLength="7"
         android:inputType="number"
+        android:maxLength="7"
         android:backgroundTint="@color/backgroundColor"
         android:maxLines="1"
-        android:hint="@string/points"
+        android:hint="@string/amount"
         android:minWidth="50dp"
         android:layout_gravity="center"
         android:gravity="center"
