--- a/app/src/main/res/layout/fragment_child_about.xml
+++ b/app/src/main/res/layout/fragment_child_about.xml
@@ -30,6 +30,15 @@
             />
 
     </androidx.appcompat.widget.Toolbar>
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/current_goal"
@@ -95,9 +104,9 @@
                     <ProgressBar
                         android:id="@+id/child_progress_bar"
                         style="?android:attr/progressBarStyleHorizontal"
+                        android:progressDrawable="@drawable/progress_bar_circle"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:progressDrawable="@drawable/progress_bar_circle"
                         />
                 </FrameLayout>
 
@@ -124,7 +133,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@drawable/ic_check_24dp"
                 android:visibility="gone"
-                android:scaleType="centerCrop"
+                android:scaleType="fitEnd"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:layout_marginStart="4dp"
@@ -136,8 +145,46 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
     </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="false"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="10dp"
+        >
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:orientation="vertical">
 
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_gravity="start"
+                    android:text="@string/achievements"
+                    app:autoSizeTextType="uniform"
+                    android:gravity="start"
+                    android:textColor="@color/textPrimaryColor"
+                    android:layout_margin="10dp"
+                    />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/achievements_recycler"
+                    android:nestedScrollingEnabled="false"
+                    />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.cardview.widget.CardView>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
