--- a/app/src/main/res/layout/one_time_task_item.xml
+++ b/app/src/main/res/layout/one_time_task_item.xml
@@ -69,7 +69,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:srcCompat="@drawable/anim_check"
             android:visibility="visible"
-            android:scaleType="centerCrop"
+            android:scaleType="fitEnd"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:layout_marginStart="4dp"
