--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,13 @@
 <resources>
     <color name="colorPrimary">#83FFFFFF</color>
     <color name="colorPrimaryDark">#83FFFFFF</color>
-    <color name="colorAccent">#FF8A65</color>
-    
+    <color name="colorAccent">#ff7b00</color>
+
+    <color name="colorBackgroundApplication">#FAFAF5</color>
+
     <color name="colorAccentPale">#f1d3cb</color>
     <color name="backgroundColor">#f1f1f1</color>
-    <color name="textPrimaryColor">#291e1c</color>
+    <color name="textPrimaryColor">#434040</color>
     <color name="textSecondColor">#fff</color>
 
     <color name="image_card_background">#f8f8f8</color>
