--- a/app/src/main/res/layout/fragment_child_select.xml
+++ b/app/src/main/res/layout/fragment_child_select.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
+    >
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mainview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -20,29 +20,72 @@
             android:elevation="1dp"
             app:layout_constraintTop_toTopOf="parent"
             android:background="#fff"
+            style="@style/MyToolbar"
             android:textAlignment="center"
-
             >
-            <TextView
-                android:id="@+id/toolbar_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                android:layout_gravity="center"
-                android:text="@string/child_select"/>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageButton
+                    android:id="@+id/exit_button"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="0dp"
+                    android:src="@drawable/ic_exit_to_app_black_24dp"
+                    android:rotation="180"
+                    app:layout_constraintDimensionRatio="1:1"
+                    android:scaleType="fitXY"
+                    android:background="@color/transparentColor"
+                    />
+
+                <TextView
+                    android:id="@+id/toolbar_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    app:layout_constraintStart_toEndOf="@id/exit_button"
+                    app:layout_constraintEnd_toStartOf="@id/update_button"
+                    android:text="@string/child_select"/>
+
+                <ImageButton
+                    android:id="@+id/update_button"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="0dp"
+                    app:srcCompat="@drawable/animation_update_rotation"
+                    app:layout_constraintDimensionRatio="1:1"
+                    android:scaleType="fitXY"
+                    android:background="@color/transparentColor"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.appcompat.widget.Toolbar>
 
 
-
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_below="@id/toolbar"
             android:id="@+id/task_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            />
-    </RelativeLayout>
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_below="@id/toolbar"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
