--- a/app/src/main/res/layout/fragment_points.xml
+++ b/app/src/main/res/layout/fragment_points.xml
@@ -16,21 +16,60 @@
         android:elevation="1dp"
         app:layout_constraintTop_toTopOf="parent"
         android:background="#fff"
+        style="@style/MyToolbar"
         android:textAlignment="center"
-
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:layout_gravity="center"
-            android:text="@string/about_child"
-            app:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:textColor="@color/textPrimaryColor"
-            />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <ImageButton
+                android:id="@+id/exit_button"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="0dp"
+                android:src="@drawable/ic_exit_to_app_black_24dp"
+                android:rotation="180"
+                app:layout_constraintDimensionRatio="1:1"
+                android:scaleType="fitXY"
+                android:background="@color/transparentColor"
+                />
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                app:layout_constraintStart_toEndOf="@id/exit_button"
+                app:layout_constraintEnd_toStartOf="@id/update_button"
+                android:text="@string/about_child"
+                />
+
+            <ImageButton
+                android:id="@+id/update_button"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="0dp"
+                app:srcCompat="@drawable/animation_update_rotation"
+                app:layout_constraintDimensionRatio="1:1"
+                android:scaleType="fitXY"
+                android:background="@color/transparentColor"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.Toolbar>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -47,7 +86,7 @@
                     android:id="@+id/points_count"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="300"
+                    android:text="0"
                     android:textColor="@color/textPrimaryColor"
                     android:textSize="70sp"
                     android:textScaleX="1.05"
@@ -139,7 +178,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             android:clickable="true"
                             android:focusable="true"
-                            android:visibility="gone"
+                            android:visibility="visible"
 
                             />
 
@@ -161,8 +200,6 @@
                             app:layout_constraintTop_toBottomOf="@id/goal_label"
                             app:srcCompat="@drawable/anim_check_no_circle"
                             android:foreground="@drawable/ic_empty_center_circle"
-
-
                             />
 
                         <TextView
@@ -330,6 +367,8 @@
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
                 app:autoSizeTextType="uniform"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
                 android:text="@string/encourage_with_money"
                 android:background="@drawable/button_background"
                 android:visibility="gone"
@@ -348,6 +387,8 @@
                 android:textAllCaps="false"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
                 app:autoSizeTextType="uniform"
                 android:text="@string/share_money"
                 android:background="@drawable/button_background"
