--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,12 @@
     </style>
 
 
+    <style name="MyToolbar" parent="@style/Widget.AppCompat.Toolbar">
+        <item name="contentInsetStart">8dp</item>
+        <item name="contentInsetEnd">8dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:padding">0dp</item>
+    </style>
+
+
 </resources>
